--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,19 +8,24 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core)
-find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core)
+find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core Network)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core Network)
 
-add_library(QRedmineClient SHARED
+add_library(
+  QRedmineClient SHARED
   QRedmineClient_global.h
   qredmineclient.cpp
   qredmineclient.h
-  authenticator.h authenticator.cpp
-  passwordauthentication.h passwordauthentication.cpp
-  tokenauthentication.h tokenauthentication.cpp
-  request.h request.cpp
-)
+  authenticator.h
+  authenticator.cpp
+  passwordauthentication.h
+  passwordauthentication.cpp
+  tokenauthentication.h
+  tokenauthentication.cpp
+  request.h
+  request.cpp)
 
-target_link_libraries(QRedmineClient PRIVATE Qt${QT_VERSION_MAJOR}::Core)
+target_link_libraries(QRedmineClient PRIVATE Qt${QT_VERSION_MAJOR}::Core
+											 Qt${QT_VERSION_MAJOR}::Network)
 
 target_compile_definitions(QRedmineClient PRIVATE QREDMINECLIENT_LIBRARY)
